fix account name wrap

--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -6,6 +6,10 @@ section.header {
 
     ul.dropdown.menu .submenu {
       background-color: $secondary-color;
+
+      a.account-link {
+        white-space: nowrap;
+      }
     }
 
     div.top-bar-left {
